--- a/ecr/templates/ecr/index.html
+++ b/ecr/templates/ecr/index.html
@@ -31,26 +31,28 @@
                     <div class="col-12 col-lg-6 py-3">
                         <div class="card shadow-sm">
                             <div class="card-body">
-                                <h5 class="card-title mb-3">
+                                <h5 class="card-title text-center mb-3">
                                     <span class="card-title-text">Graphic output</span>
                                 </h5>
                                 <div class="card-text">
+                                    <img class="img-responsive" src="{% static 'img/graphic.png' %}">
                                     Section overview goes here. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
                                 </div>
-                                <a class="card-link-mask" href="docs-page.html#section-1"></a>
+                                <a class="card-link-mask" href="#"></a>
                             </div><!--//card-body-->
                         </div><!--//card-->
                     </div><!--//col-->
                     <div class="col-12 col-lg-6 py-3">
                         <div class="card shadow-sm">
                             <div class="card-body">
-                                <h5 class="card-title mb-3">
+                                <h5 class="card-title text-center mb-3">
                                     <span class="card-title-text">Tabular output</span>
                                 </h5>
                                 <div class="card-text">
+                                    <img class="img-responsive" src="{% static 'img/tabular.png' %}">
                                     Section overview goes here. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.
                                 </div>
-                                <a class="card-link-mask" href="docs-page.html#section-2"></a>
+                                <a class="card-link-mask" href="#"></a>
                             </div><!--//card-body-->
                         </div><!--//card-->
                     </div><!--//col-->
