--- a/ecr/templates/ecr/mining.html
+++ b/ecr/templates/ecr/mining.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
 
+{% block index %}
+    <div class="text-center">
+        <h4 style="color:#fff"> {{ title }} </h4>
+    </div>
+{% endblock %}
+
 {% block container %}
 
 {% load static %}
