Adding suggestions session

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -69,7 +69,7 @@
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a class="btn btn-primary d-none d-lg-flex" href="#">
+                            <a class="btn btn-primary d-none d-lg-flex" href="{% url 'suggestions' %}">
                                 Suggestions
                             </a>
                         </li>
