Change texts in front end

--- a/ecr/templates/ecr/analyze.html
+++ b/ecr/templates/ecr/analyze.html
@@ -60,11 +60,12 @@
             <br/>
             <div class="col-lg-3"></div>
             <div class="col-lg-6">
+                <p class="text-center">Click to show the tabular output</p>
                 <a class="btn btn-primary" data-toggle="collapse" href="#collapseEnriched" role="button" aria-expanded="true" aria-controls="collapseLog">
-                    Enriched Cis-Elements
+                    Enriched cis-Elements
                 </a>
                 <a class="btn btn-primary" data-toggle="collapse" href="#collapseCis" role="button" aria-expanded="false" aria-controls="collapseCis">
-                    General Cis-Element list's
+                    General cis-Element
                 </a>
                 <a class="btn btn-primary" data-toggle="collapse" href="#collapseLog" role="button" aria-expanded="false" aria-controls="collapseLog">
                     PhytoProm Log result
@@ -78,7 +79,7 @@
             <div class="col-lg-12 collapse" id="collapseEnriched">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        Enriched Cis-Element list's with data analysis:
+                        Enriched cis-Element list with data analysis:
                     </div>
                     <!-- /.panel-heading -->
                     <div class="panel-body">
@@ -127,7 +128,7 @@
             <div class="col-lg-12 collapse" id="collapseCis">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        General Cis-Element list's with data analysis:
+                        General Cis-Element list with data analysis:
                     </div>
                     <!-- /.panel-heading -->
                     <div class="panel-body">
