--- a/ecr/templates/ecr/index.html
+++ b/ecr/templates/ecr/index.html
@@ -5,14 +5,12 @@
 {% load static %}
 {% load widget_tweaks %}
     <div class="home">
-        <p><span class="tab">Phytoprom is a mining, identification and enrichment analysis tool for candidate 
-            cis-regulatory elements (CCREs) in plant genomes available on Phytozome database. It is a
-            user-friendly web application, providing a way to characterize the large-scale gene
-            datasets such as those from transcriptome analysis. The present platform is web-based
-            and easy to handle graphical-user interface, which allows users to readily input gene
-            lists with Phytozome IDs. Additionally, Phytoprom makes it possible to download sets
-            of species-specific promoters, transcripts and proteins under study for analysis in other
-            databases.</p>
+        <p><span class="tab">Phytoprom is an enrichment analysis tool for candidate cis-regulatory 
+        elements (CCREs). It is based on plant gene promoters available on Phytozome database. 
+        Phytoprom is a user-friendly web application, providing a way to characterize large-scale
+        gene promoter datasets. The tool also makes it possible to download sets of 
+        species-specific promoters, transcripts and proteins under study for analysis in other 
+        databases.</p>
     <p>For more information, see documentation section.</p>
     </div>
 {% endblock %}
@@ -26,7 +24,7 @@
                         <div class="card shadow-sm">
                             <div class="card-body">
                                 <h5 class="card-title text-center mb-3">
-                                    <span class="card-title-text">Graphic output</span>
+                                    <span class="card-title-text">Graphical output</span>
                                 </h5>
                                 <div class="card-text">
                                     <img class="img-responsive" src="{% static 'img/graphic.png' %}">
@@ -35,11 +33,10 @@
                                             Visual output for rapid “at a glance” insight of enriched CCREs distribution in the scrutinized sample;
                                         </li>
                                         <li>
-                                            Online chart creation in .pdf format for data publication on scientific journals;
+                                            Online chart creation in .pdf format for data publication on scientific journals.
                                         </li>
                                     </ul>
                                 </div>
-                                <a class="card-link-mask" href="#"></a>
                             </div><!--//card-body-->
                         </div><!--//card-->
                     </div><!--//col-->
@@ -53,17 +50,16 @@
                                     <img class="img-responsive" src="{% static 'img/tabular.png' %}">
                                     <ul>
                                         <li>
-                                            The tabular output contains detailed information of the analyzed CCREs (enriched or not);
+                                            The tabular output contains detailed information of the CCREs (enriched or not) analyzed;
                                         </li>
                                         <li>
-                                            The table shows the mined motifs, associated TF identification and statistical data;
+                                            The table shows the found motifs, associated transcription factor (TF) and statistical data;
                                         </li>
                                         <li>
-                                            Also presents links to scientific manuscripts with information on the function of associated TF in plants under stress conditions;
+                                            Also presents links to the scientific manuscripts with information about the role of the associated TF on plants under stress conditions.
                                         </li>
                                     </ul>
                                 </div>
-                                <a class="card-link-mask" href="#"></a>
                             </div><!--//card-body-->
                         </div><!--//card-->
                     </div><!--//col-->
