--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -64,7 +64,7 @@
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a class="btn btn-primary d-none d-lg-flex" href="#">
+                            <a class="btn btn-primary d-none d-lg-flex" href="{% url 'documentation' %}">
                                 Documentation
                             </a>
                         </li>
