--- a/ecr/templates/ecr/promoter.html
+++ b/ecr/templates/ecr/promoter.html
@@ -43,9 +43,11 @@
     </div>
     <div class="col-lg-3"></div>
     {% else %}
-        <div class="col-lg-12">
+        <div class="col-lg-3"></div>
+        <div class="col-lg-6">
             <span class="promoters">{{promoters | linebreaks}}</span>
         </div>
+        <div class="col-lg-3"></div>
     {%endif%}
 </div>
 
