--- a/ecr/templates/ecr/mining.html
+++ b/ecr/templates/ecr/mining.html
@@ -45,10 +45,23 @@
     {% else %}
         <div class="col-lg-3"></div>
         <div class="col-lg-6">
+            <a id="miningId" class="btn btn-primary" 
+                download="output.fasta" type="text/csv" >Download FASTA
+            </a>
+            <br/>
+            <br/>
             <span class="promoters">{{output | linebreaks}}</span>
         </div>
         <div class="col-lg-3"></div>
     {%endif%}
 </div>
+
+
+<script type="text/javascript">
+    var csv = '{{ output |escapejs }}';
+    var data = new Blob([csv]);
+    var a2 = document.getElementById("miningId");
+    a2.href = URL.createObjectURL(data);
+</script>
 
 {% endblock %}
