--- a/ecr/templates/ecr/promoter.html
+++ b/ecr/templates/ecr/promoter.html
@@ -45,10 +45,22 @@
     {% else %}
         <div class="col-lg-3"></div>
         <div class="col-lg-6">
+            <a id="promotersId" class="btn btn-primary" 
+                download="Promoters.fasta" type="text/csv" >Download FASTA
+            </a>
+            <br/>
+            <br/>
             <span class="promoters">{{promoters | linebreaks}}</span>
         </div>
         <div class="col-lg-3"></div>
     {%endif%}
 </div>
+
+<script type="text/javascript">
+    var csv = '{{ promoters |escapejs }}';
+    var data = new Blob([csv]);
+    var a2 = document.getElementById("promotersId");
+    a2.href = URL.createObjectURL(data);
+</script>
 
 {% endblock %}
